# genius-lab

./: .gitignore  CLAUDE.md
nuclearmind/: ARCHITECTURE.md  CLAUDE.md  KNOWN_ISSUES.md  Makefile  STATUS.md  pyproject.toml  verified-deps.toml
nuclearmind/src/nuclearmind/: __init__.py
nuclearmind/src/nuclearmind.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nuclearmind/src/nuclearmind/data/: __init__.py  mock.py
nuclearmind/src/nuclearmind/surrogate/: __init__.py
nuclearmind/src/nuclearmind/trust/: __init__.py
nuclearmind/tests/: conftest.py  test_mock_data.py
projects/: README.md
projects/monetizable/: 04-climafin.md  08-spectraforge.md  09-emi-scout.md  10-driftguard.md  11-aircomply.md  12-depshield.md  13-vibesentry.md  14-gridpulse.md  15-contractforge.md  16-buildingiq-lite.md
projects/open-source/: 01-quantum-bench.md  02-sat-guard.md  06-vigipipe.md
projects/tier-b/: 03-tinkerworld.md  05-seismocheck.md  07-omni-oracle.md
projects/tier-s/: 01-nuclearmind.md  02-fusionedge.md  03-nucregai.md
research/: anti-hallucination-state-of-art-2026.md
templates/: ANTI_HALLUCINATION_FRAMEWORK.md  KNOWN_ISSUES.md.template  Makefile.template  PROJECT_CLAUDE.md.template  STATUS.md.template  verified-deps.toml.template
