[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nuclearmind"
version = "0.1.0"
description = "Explainable AI Digital Twin for Nuclear Reactor Safety"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Genius Lab" }]
keywords = ["nuclear", "digital-twin", "xai", "gnn", "conformal-prediction", "safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "h5py>=3.10",
]

[project.optional-dependencies]
ml = [
    "torch>=2.4",
    "torch-geometric>=2.5",
    "MAPIE>=1.0",
    "captum>=0.7",
    "torch-uncertainty>=0.9",
]
xai = [
    "shap>=0.50",
]
quality = [
    "cleanlab>=2.6",
    "alibi-detect[torch]>=0.12",
]
dashboard = [
    "streamlit>=1.30",
    "matplotlib>=3.8",
    "plotly>=5.18",
]
openmc = [
    # OpenMC is NOT on PyPI. Install via: conda install -c conda-forge openmc
    # This extra is a placeholder for documentation purposes.
]
all = [
    "nuclearmind[ml,xai,quality,dashboard]",
]
dev = [
    "pytest>=9.0",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/cesabici-bit/genius-lab"
Repository = "https://github.com/cesabici-bit/genius-lab"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
